--- a/KotlinMajneApp/app/src/main/res/values/styles.xml
+++ b/KotlinMajneApp/app/src/main/res/values/styles.xml
@@ -26,4 +26,13 @@
         <item name="android:onClick">operationAction</item>
     </style>
 
+    <style name="buttonNormal">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:layout_margin">6dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/rounded_corner</item>
+    </style>
+
 </resources>
