--- a/KotlinMajneApp/app/src/main/res/layout/calc.xml
+++ b/KotlinMajneApp/app/src/main/res/layout/calc.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:background="@color/almostWhite"
     tools:ignore="HardcodedText"
-    tools:context=".MainActivity">
+    tools:context=".Calculator">
 
 
     <Button
