--- a/app/src/main/res/layout/animation.xml
+++ b/app/src/main/res/layout/animation.xml
@@ -15,10 +15,20 @@
         style="@style/buttonNormal"
         android:onClick="clockwiseAction"
         android:text="Drehen" />
+    <Button
+        android:id="@+id/animate2Button"
+        style="@style/buttonNormal"
+        android:onClick="myanimAction"
+        android:text="Animieren"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
 
     <ImageView
         android:id="@+id/catImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="141dp"
+        android:layout_height="159dp"
+        android:contentDescription="Katze"
         app:srcCompat="@drawable/cat" />
 </LinearLayout>
